# streamlit-coil-detect

./: .gitignore  README.md  detector.py  packages.txt  pyproject.toml  streamlit_app.py  去噪保轮廓指南.md  调参指南.md
.streamlit/: config.toml
